tests/other-tests/tests/expand/fail/unknown_fn.err.txt
error[E0425]: cannot find function `non_existent_fn` in this scope
 --> /tests/expand/fail/unknown_fn.rs:2:5
  |
2 |     non_existent_fn();
  |     ^^^^^^^^^^^^^^^ not found in this scope
For more information about this error, try `rustc --explain E0425`.
